tests/fail/unknown_element.stderr
error: Unknown element 'span'. Use native elements (div, svg, anchored, deferred) or PascalCase for components.
 --> tests/fail/unknown_element.rs:5:20
  |
5 |     let _ = ui! { <span/> };
  |                    ^^^^
